--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-configparser==3.5
+configparser
 flake8
 mock
-prometheus-client
+prometheus_client
 python-neutronclient
 python-novaclient
-swift
+python-cinderclient
+requests
+PyYAML
